--- a/assets/amp-custom.css
+++ b/assets/amp-custom.css
@@ -1,3 +1,687 @@
+:root {
+    --white: rgb(255, 255, 255);
+    --white-opacity: rgba(255, 255, 255, 0.9);
+    --white-opacity-max: rgba(255, 255, 255, 0.1);
+    --gray: #D6DEEA;
+    --middle-gray: #EFF3F7;
+    --black: #000;
+    --middle-black: #373737; 
+    --light-black: #595959;
+    --blue: #005C98;
+    --light-blue: #E7F0FB;
+    --strong-blue: #000640;
+    --middle-blue: #24284F;
+    --green: #0FBD55;
+    --red: #F74135;
+    --white-gradient: linear-gradient(0deg, #F9FCFF, #F9FCFF), #FFFFFF;
+    --blue-gradient: linear-gradient(270deg, #F9FCFF 0%, #F2F9FF 100%);
+    --middle-blue-gradient: linear-gradient(0deg, #E7F0FB, #E7F0FB), #FFFFFF;
+    --strong-blue-gradient: linear-gradient(0deg, #E7F0FB, #E7F0FB), linear-gradient(0deg, #F9FCFF, #F9FCFF), #C4C4C4;
+    --font: 'Open Sans';
+    --font-bold: 'Open Sans Bold';
+    --font-semi: 'Open Sans Semi';
+    --banner: url('/img/main_bg.webp');
+    --mob_banner: url('/img/bg-mob.webp');
+    --star_full: url('/img/stars_rate_1.png');
+    --star_empty: url('/img/stars_rate_2.png');
+    --faq_close: url('/img/faq_close.png');
+  }
+@font-face {
+    font-family: 'Open Sans';
+    src: url('/fonts/OpenSans-Regular.ttf')  format('truetype');
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'Open Sans Bold';
+    src: url('/fonts/OpenSans-Bold.ttf')  format('truetype');
+    font-display: swap;
+  }
+  @font-face {
+    font-family: 'Open Sans Semi';
+    src: url('/fonts/OpenSans-SemiBold.ttf')  format('truetype');
+    font-display: swap;
+  }
 body {
-    background: blue;
+    background: white;
 }
+/* Common */
+.container {
+    width: 1270px;
+    margin: 0 auto;
+    max-width: 90%;
+}
+/* Common */
+/* Content */
+.content {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.content h2, .content h3 {
+    margin: 20px 0px;
+}
+.content ul, .content ol {
+    margin-left: 30px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    font-family: var(--font);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+}
+.content ul li, .content ol li {
+    margin-bottom: 10px;
+    line-height: 175%;
+}
+.content p {
+    margin-bottom: 15px;
+    font-family:  var(--font);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 175%;
+}
+.content img {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 100%;
+}
+.content h2, h3, h4, h5, h6 {
+    text-align: center;
+    font-family:  var(--font-bold);
+    font-style: normal;
+    font-weight: bold;
+    color: var(--black);
+}
+.content blockquote {
+    background: var(--middle-blue-gradient);
+    padding: 35px 25px;
+    border-radius: 15px;
+    font-family: var(--font);
+    font-style: normal;
+    font-weight: normal;
+    line-height: 175%;
+    font-size: 15px;
+    border: 1px solid var(--blue);
+    margin-top: 30px;
+    margin-bottom: 30px;
+    margin-left: 0px;
+    margin-right: 0px;
+}
+.cms-table {
+  width: 100%;
+  border-collapse: collapse;
+  line-height: 1.25;
+  color: #4e4e4e
+}
+
+table tr {
+  transition: background-color .27s cubic-bezier(.215, .61, .355, 1) 0s
+}
+
+table td {
+  color: var(--black);
+  padding: 10px 15px;
+  border-bottom: 1px solid var(--black);
+   font-family: var(--font);
+}
+table tr:last-child td {
+  border-bottom: none;
+}
+table td:first-child {
+  width: 30%;
+  border-right: 1px solid var(--black);
+}
+table th {
+  font-weight: 400;
+  text-align: left;
+  color:var(--black);
+  height: 32px;
+  background-color: var(--light-blue);
+  font-family: var(--font);
+  font-weight: bold;
+  padding: 10px 15px;
+  text-align: center;
+}
+
+table {
+  border: 2px solid var(--blue);
+  border-radius: 4px;
+  line-height: 1.6;
+  box-shadow: 0 2px 14px rgba(4,0,26,.15);
+  overflow: auto;
+  -webkit-overflow-scrolling: touch;
+  margin-bottom: 50px;
+  border-spacing: 0;
+  background-color: #fff;
+  border-radius: 14px;
+  border: 1px solid rgba(0,0,0,.2);
+  display: block;
+  width: 100%;
+}
+.content table ol {
+  margin-left: 5px;
+}
+@media (min-width: 320px) and (max-width: 767px) {
+    .content {
+    overflow: hidden;
+    }
+    .content blockquote { 
+        padding: 15px;
+    }
+    .content ol, .content ul {
+        margin-left: 0px;
+        padding-left: 15px;
+    }
+}
+/* End content */
+/* Header */
+.header {
+    background: #005c98;
+}
+.header_container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+.hamburger {
+    position: absolute;
+    right: 10px;
+    top: 15px;
+    width: 40px;
+    height: 40px;
+    z-index: 2;
+}
+#sidebar1 {
+    background: #0b072b;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 250px;
+}
+.nav_menu {
+    list-style: none;
+    padding-left: 0px;
+    margin-left: 0px;
+}
+.nav_menu li {
+    margin-bottom: 10px;
+}
+.nav_menu li:last-child {
+    margin-bottom: 40px;
+}
+.navbar__btn {
+    background: #0fbd55;
+    border: none;
+    color: white;
+    font-weight: bold;
+    border-radius: 4px;
+}
+.nav_menu a {
+    color: white;
+    font-family: 'Open Sans';
+    text-decoration: none;
+}
+
+/* Header end */
+/* Main Banner */
+.main_banner{
+    background: rgb(2,0,36);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+    border: 1px solid transparent;
+}
+.banner_title {
+    color: white;
+    font-family: 'Open Sans';
+    text-align: center;
+    font-size: 18px;
+}
+/* Main Banner */
+/* H1 */
+.cover_h1 h1 {
+    font-family: 'Open Sans';
+    text-align: center;
+    font-size: 24px;
+}
+/* H1 */
+/* Casino Table */
+
+.casino_item_licensed {
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+}
+.btn_ref {
+    width: 180px;
+    height: 46px;
+    background: var(--green);
+    border: 1px solid var(--white-opacity-max);
+    box-sizing: border-box;
+    box-shadow: inset 0px 0px 4px rgba(255, 255, 255, 0.25);
+    border-radius: 10px;
+    display: inline-block;
+    text-align: center;
+    font-family: var(--font-bold);
+    font-style: normal;
+    font-size: 17px;
+    line-height: 23px;
+    text-align: center;
+    color: var(--white);
+    text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+    text-decoration: none;
+    line-height: 46px;
+    margin-bottom: 15px;
+    cursor: pointer;
+}
+
+.casino_item_ratin_value {
+    font-family: var(--font-bold);
+    font-style: normal;
+    font-size: 22px;
+    line-height: 30px;
+    color: var(--middle-black);
+}
+.casino_item_rating_full {
+    position: absolute;
+    top:0px;
+    left:0px;
+    height: 100%;
+    background: var(--star_full);
+}
+.casino_item_rating_empty {
+    height: 100%;
+    width: 100%;
+    background: var(--star_empty);
+}
+.casino_item_rating_container {
+    display: flex;
+    padding: 2px 10px;
+    box-sizing: border-box;
+    justify-content: space-between;
+    align-items: center;
+}
+.casino_item_rating_box {
+    width: 120px;
+    height: 24px;
+    position: relative;
+}
+ .casino_table_wrapper {
+     padding: 30px 0px;
+     background: var(--blue-gradient);
+ }
+ .casino_item {
+     background: var(--white);
+     border: 1px solid var(--gray);
+     box-sizing: border-box;
+     box-shadow: 0px 2px 10px rgba(77, 92, 129, 0.25);
+     border-radius: 15px;
+     margin-top: 10px;
+     margin-bottom: 10px;
+     display: flex;
+ }
+
+ .casino_item_thumbnail {
+     position: relative;
+     width: 23%;
+     text-align: center;
+    border-right:1px solid #E5E5E5;
+    box-sizing: border-box;
+    cursor: pointer;
+ }
+ .casino_item_marker {
+     position:absolute;
+     top:-17px;
+     left:3px;
+ }
+ .casino_item_rating {
+     width:20%;
+     box-sizing: border-box;
+     min-width: 20%;
+ }
+ .casino_item_packet {
+     width: 21%;
+      min-width: 21%;
+     box-sizing: border-box;
+ }
+ .casino_item_packet_item {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 222px;
+    min-height: 112px;
+    box-sizing: border-box;
+    background: var(--white);
+    box-sizing: border-box;
+    
+ }
+ .casino_item_weiger {
+     width: 21%;
+      min-width: 21%;
+     box-sizing: border-box;
+ }
+ .casino_item_buttons {
+     width: 15%;
+ }
+ .casino_item_buttons_box {
+     display: flex;
+     justify-content: flex-end;
+     flex-wrap: wrap;
+ }
+ .casino_item_column {
+     padding: 15px 25px;
+     display: flex;
+     align-items: center;
+     flex-wrap: wrap;
+ }
+ .casino_item_title {
+    font-family: var(--font-bold);
+    font-style: normal;
+    font-size: 22px;
+    line-height: 30px;
+    color: var(--middle-black);
+    width: 100%;
+    margin-bottom: 10px;
+ }
+.casino_item_title_packet
+ {
+    width: 100%;
+    font-family: var(--font-semi);
+    font-style: normal;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: var(--light-black);
+    text-align: center;
+ }
+ .casino_item_subtitle, .casino_item_sub_title_packet {
+     width: 100%;
+     font-family: var(--font);
+    font-style: light;
+ }
+ .casino_item_sub_title_packet {
+     text-transform: uppercase;
+      font-weight: bold;
+      text-align: center;
+ }
+ .casino_item_rating_wrapper {
+    margin-top: 10px;
+    width: 203px;
+    height: 35px;
+    background:var(--middle-gray);
+    border-radius: 18.5px;
+ }
+ .btn_review {
+    width: 180px;
+    height: 46px;
+    background: #005c98;
+    background: var(--blue);
+    border: 1px solid hsla(0,0%,100%,.2);
+    box-sizing: border-box;
+    box-shadow: inset 0 0 4px hsla(0,0%,100%,.25);
+    border-radius: 10px;
+    display: inline-block;
+    font-family: "Open Sans Bold";
+    font-family: var(--font-bold);
+    font-style: normal;
+    font-size: 17px;
+    line-height: 23px;
+    text-align: center;
+    color: #fff;
+    color: var(--white);
+    text-shadow: 0 1px 2px rgba(0,0,0,.25);
+    text-decoration: none;
+    line-height: 46px;
+    cursor: pointer;
+}
+.casino_table_btn_wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+}
+ @media (min-width: 320px) and (max-width: 767px) {
+     .casino_item_packet_item {
+         width: 90%;
+     }
+     .btn_ref {
+         max-width: 50%;
+         margin-bottom: 0px;
+     }
+     .casino_item {
+         flex-wrap: wrap;
+     }
+     .casino_item_thumbnail {
+         width: 100%;
+         text-align: center;
+     }
+     .casino_item_column {
+         width: 100%;
+         justify-content: center;
+         text-align: center;
+         padding: 10px 10px;
+     }
+     .casino_item_buttons_box {
+         justify-content: space-between;
+         width: 100%;
+     }
+     .casino_item_buttons  {
+        padding: 3px;
+     }
+     .casino_item_buttons_box a {
+         width: 50%;
+         margin-bottom: 0px;
+     }
+     .casino_item_buttons_box .btn_ref {
+         border-top-right-radius: 0px;
+         border-bottom-right-radius: 0px;
+         border-right: 1px solid var(--white);
+     }
+     .casino_item_buttons_box .btn_review {
+         border-top-left-radius: 0px;
+         border-bottom-left-radius: 0px;
+         border-left: 1px solid var(--white);
+     }
+     .casino_item_marker {
+        top: 3px;
+     } 
+     .casino_item_buttons_box .btn_review {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        border-left: 1px solid var(--white);
+    }
+    .casino_item_buttons_box a {
+        width: 50%;
+        margin-bottom: 0;
+    }
+ }
+/* Casino Table */
+/* Blog cards */
+.casino_table_btn_wrapper {
+    display: flex;
+    justify-content: center;
+    padding-top:40px;
+    padding-bottom: 30px;
+   }
+   .blog_card_wrapper {
+       padding-top:25px;
+       padding-bottom:25px;
+   }
+   .blog_card_item {
+       padding-bottom: 10px;
+       padding-top: 10px;
+       display: flex;
+   }
+   .blog_card_item_left {
+       width: 30%;
+   }
+   .blog_card_item_right {
+      width: 70%;
+   }
+   .blog_card_item_img_wrapper {
+       width: 320px;
+       height: 190px;
+   }
+   .blog_card_item_img_wrapper img {
+       width: 100%;
+       height: 100%;
+       object-fit: cover;
+   }
+   .blog_card_item_permalink {
+       font-family: var(--font-bold);
+       font-style: normal;
+       font-size: 18px;
+       line-height: 22px;
+       text-decoration: none;
+       color: var(--middle-black);
+   }
+   .blog_card_item_title {
+       margin-bottom: 15px;
+   }
+   .blog_card_item_author {
+       font-family: var(--font);
+       font-style: normal;
+       font-weight: normal;
+       font-size: 12px;
+       line-height: 124%;
+       text-decoration: none;
+       color: var(--middle-black);
+       text-transform: uppercase;
+       margin-bottom: 15px;
+   }
+   .blog_card_item_author span {
+       color: var(--blue);
+       display: inline-block;
+       margin-right: 25px;
+   }
+   .blog_card_item_excerpt {
+       height: 60px;
+       overflow: hidden;
+       font-family: var(--font);
+       font-style: normal;
+       font-weight: normal;
+       font-size: 15px;
+       line-height: 175%;
+   }
+   .blog_card_item_btn {
+       width: 201px;
+       height: 46px;
+       background: var(--green);
+       border: 1px solid var(--white-opacity-max);
+       box-sizing: border-box;
+       box-shadow: inset 0px 0px 4px rgba(255, 255, 255, 0.25);
+       border-radius: 10px;
+       display: inline-block;
+       text-align: center;
+       font-family: var(--font);
+       font-style: normal;
+       font-weight: bold;
+       font-size: 17px;
+       line-height: 46px;
+       text-align: center;
+       color: var(--white);
+       text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+       text-decoration: none;
+       margin-top: 15px;
+   }
+    @media (min-width: 320px) and (max-width: 767px) {
+        .blog_card_item {
+            flex-wrap: wrap;
+        }
+        .blog_card_item_left {
+            width: 100%;
+        }
+        .blog_card_item_right {
+            margin-top: 20px;
+            width: 100%;
+        }
+        .blog_card_item_img_wrapper {
+            width: 100%;
+        }
+    }
+/* Blog cards */
+/* Footer */
+.footer_menu {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .footer_menu_item {
+    display: inline-block;
+    padding: 10px;
+  }
+  .footer_menu_item a {
+    color: var(--white);
+    text-transform: uppercase;
+    text-decoration: none;
+    font-family: 'Open Sans Semi';
+  }
+      footer {
+        padding-bottom: 25px;
+        color: var(--white);
+        background: var(--strong-blue);
+      }
+      .footer_text {
+        font-family: var(--font);
+        font-style: normal;
+        font-weight: normal;
+        font-size: 15px;
+        color: var(--white);
+      }
+      .footer_container {
+        padding-top: 25px;
+        position: relative;
+      }
+      .security_logo {
+        position: absolute;
+        top:25px;
+        right: 10px;
+      }
+      .footer_partners {
+        padding-bottom: 15px;
+        padding-top: 15px;
+        background: var(--middle-blue);
+      }
+      .footer_partners_wrapper {
+        display: flex;
+        justify-content: space-between;
+      }
+      .partners_link {
+        height: 40px;
+        display: inline-block;
+        margin-left: 15px;
+        margin-right: 15px;
+      } 
+      .partners_link:nth-child(1) {
+        margin-left: 0px;
+      }
+      .partners_link img {
+        max-height: 100%;
+      }
+      .social_link {
+        margin-left: 5px;
+        margin-right: 5px;
+      }
+      @media (min-width: 320px) and (max-width: 767px) {
+        .security_logo {
+          margin-top: 10px;
+          position: static;
+        }
+        .dmca-badge {
+            margin-top: 15px;
+        }
+        .footer_partners_wrapper {
+          flex-wrap: wrap;
+        }
+        .partners_link {
+          margin-top: 5px;
+          margin-bottom: 5px;
+        }
+        .footer_partners_left, .footer_partners_right {
+          width: 100%;
+          text-align: center;
+        }
+        .footer_text {
+          text-align: center;
+        }
+        .footer_menu ul {
+            padding-left: 0px;
+        }
+      }
+/* Footer */
