--- a/assets/amp-custom.css
+++ b/assets/amp-custom.css
@@ -335,7 +335,19 @@ table {
     font-family: 'Open Sans';
     text-decoration: none;
 }
-
+.bar {
+    width: 30px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.bar_line {
+    width: 100%;
+    height: 2px;
+    border-radius: 2px;
+    background: white;
+}
 /* Header end */
 /* Main Banner */
 .main_banner{
