Change naiming dir

--- a/assets/amp-custom.css
+++ b/assets/amp-custom.css
@@ -336,7 +336,7 @@ table {
     text-decoration: none;
 }
 .bar {
-    width: 30px;
+    width: 100%;
     height: 20px;
     display: flex;
     flex-direction: column;
